Added setter for countries data

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1427,4 +1427,9 @@ $.fn[pluginName].getCountryData = function() {
   return allCountries;
 };
 
+// set the country data object
+$.fn[pluginName].setCountryData = function setCountryData(countryData) {
+  allCountries = countryData;
+};
+
 $.fn[pluginName].version = "<%= version %>";
