comments and tidyup

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -306,10 +306,10 @@ Plugin.prototype = {
   _setInitialState: function() {
     var val = this.telInput.val();
 
-    // if there is a number, and it's valid, we can go ahead and set the flag, else fall back to default
+    // if we already have a dial code we can go ahead and set the flag, else fall back to default
     if (this._getDialCode(val)) {
       this._updateFlagFromNumber(val, true);
-    } else if (this.options.defaultCountry != "auto") {
+    } else if (this.options.defaultCountry !== "auto") {
       // check the defaultCountry option, else fall back to the first in the list
       if (this.options.defaultCountry) {
         this.options.defaultCountry = this._getCountryData(this.options.defaultCountry.toLowerCase(), false, false);
@@ -323,6 +323,7 @@ Plugin.prototype = {
         this._updateDialCode(this.options.defaultCountry.dialCode, false);
       }
     }
+    // NOTE: if defaultCountry is set to auto, that will be handled separately
 
     // format
     if (val) {
@@ -416,7 +417,7 @@ Plugin.prototype = {
       this.utilsScriptDeferred.resolve();
     }
 
-    if (this.options.defaultCountry == "auto") {
+    if (this.options.defaultCountry === "auto") {
       this._loadAutoCountry();
     } else {
       this.autoCountryDeferred.resolve();
@@ -439,7 +440,7 @@ Plugin.prototype = {
     // 2) not already started loading (start)
     // 3) already started loading (do nothing - just wait for loading callback to fire)
     if ($.fn[pluginName].autoCountry) {
-      this.autoCountryLoaded();
+      this.geoIpLookupComplete();
     } else if (!$.fn[pluginName].startedLoadingAutoCountry) {
       // don't do this twice!
       $.fn[pluginName].startedLoadingAutoCountry = true;
@@ -456,7 +457,7 @@ Plugin.prototype = {
           // TODO: this should just be the current instances
           // UPDATE: use setTimeout in case their geoIpLookup function calls this callback straight away (e.g. if they have already done the geo ip lookup somewhere else). Using setTimeout means that the current thread of execution will finish before executing this, which allows the plugin to finish initialising.
           setTimeout(function() {
-            $(".intl-tel-input input").intlTelInput("autoCountryLoaded");
+            $(".intl-tel-input input").intlTelInput("geoIpLookupComplete");
           });
         });
       }
@@ -1028,7 +1029,7 @@ Plugin.prototype = {
   _selectFlag: function(countryCode, updateDefault) {
     // do this first as it will throw an error and stop if countryCode is invalid
     this.selectedCountryData = (countryCode) ? this._getCountryData(countryCode, false, false) : {};
-    // update the "defaultCountry" - we only need the iso2 from now on, so just store that
+    // update the defaultCountry - we only need the iso2 from now on, so just store that
     if (updateDefault && this.selectedCountryData.iso2) {
       // can't just make this equal to selectedCountryData as would be a ref to that object
       this.options.defaultCountry = {
@@ -1212,8 +1213,8 @@ Plugin.prototype = {
    ********************/
 
   // this is called when the geoip call returns
-  autoCountryLoaded: function() {
-    if (this.options.defaultCountry == "auto") {
+  geoIpLookupComplete: function() {
+    if (this.options.defaultCountry === "auto") {
       this.options.defaultCountry = $.fn[pluginName].autoCountry;
       this._setInitialState();
       this.autoCountryDeferred.resolve();
