rename var to avoid confusion

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -312,15 +312,15 @@ Plugin.prototype = {
     } else if (this.options.defaultCountry !== "auto") {
       // check the defaultCountry option, else fall back to the first in the list
       if (this.options.defaultCountry) {
-        this.options.defaultCountry = this._getCountryData(this.options.defaultCountry.toLowerCase(), false, false);
+        this.options.defaultCountryData = this._getCountryData(this.options.defaultCountry.toLowerCase(), false, false);
       } else {
-        this.options.defaultCountry = (this.preferredCountries.length) ? this.preferredCountries[0] : this.countries[0];
+        this.options.defaultCountryData = (this.preferredCountries.length) ? this.preferredCountries[0] : this.countries[0];
       }
-      this._selectFlag(this.options.defaultCountry.iso2);
+      this._selectFlag(this.options.defaultCountryData.iso2);
 
       // if empty, insert the default dial code (this function will check !nationalMode and !autoHideDialCode)
       if (!val) {
-        this._updateDialCode(this.options.defaultCountry.dialCode, false);
+        this._updateDialCode(this.options.defaultCountryData.dialCode, false);
       }
     }
     // NOTE: if defaultCountry is set to auto, that will be handled separately
@@ -986,7 +986,7 @@ Plugin.prototype = {
       countryCode = "";
     } else if (!number || number == "+") {
       // empty, or just a plus, so default
-      countryCode = this.options.defaultCountry.iso2;
+      countryCode = this.options.defaultCountryData.iso2;
     }
 
     if (countryCode !== null) {
@@ -1029,10 +1029,10 @@ Plugin.prototype = {
   _selectFlag: function(countryCode, updateDefault) {
     // do this first as it will throw an error and stop if countryCode is invalid
     this.selectedCountryData = (countryCode) ? this._getCountryData(countryCode, false, false) : {};
-    // update the defaultCountry - we only need the iso2 from now on, so just store that
+    // update the defaultCountryData - we only need the iso2 from now on, so just store that
     if (updateDefault && this.selectedCountryData.iso2) {
       // can't just make this equal to selectedCountryData as would be a ref to that object
-      this.options.defaultCountry = {
+      this.options.defaultCountryData = {
         iso2: this.selectedCountryData.iso2
       };
     }
