--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -302,7 +302,7 @@ Plugin.prototype = {
   },
 
 
-  // set the initial state of the input value and the selected flag
+  // set the initial state of the input value and the selected flag by either extracting a dial code from the given number, or using defaultCountry
   _setInitialState: function() {
     var val = this.telInput.val();
 
@@ -955,7 +955,7 @@ Plugin.prototype = {
 
   // check if need to select a new flag based on the given number
   _updateFlagFromNumber: function(number, updateDefault) {
-    // if we're in nationalMode and we're on US/Canada, make sure the number starts with a +1 so _getDialCode will be able to extract the area code
+    // if we're in nationalMode and we already have US/Canada selected, make sure the number starts with a +1 so _getDialCode will be able to extract the area code
     // update: if we dont yet have selectedCountryData, but we're here (trying to update the flag from the number), that means we're initialising the plugin with a number that already has a dial code, so fine to ignore this bit
     if (number && this.options.nationalMode && this.selectedCountryData && this.selectedCountryData.dialCode == "1" && number.charAt(0) != "+") {
       if (number.charAt(0) != "1") {
@@ -1215,8 +1215,11 @@ Plugin.prototype = {
   // this is called when the geoip call returns
   geoIpLookupComplete: function() {
     if (this.options.defaultCountry === "auto") {
-      this.options.defaultCountry = $.fn[pluginName].autoCountry;
-      this._setInitialState();
+      this.options.defaultCountryData = this._getCountryData($.fn[pluginName].autoCountry, false, false);
+      // if there's no initial value in the input, then update the flag
+      if (!this.telInput.val()) {
+        this.selectCountry($.fn[pluginName].autoCountry);
+      }
       this.autoCountryDeferred.resolve();
     }
   },
