rename selectCountry to setCountry and update build/tests

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1218,7 +1218,7 @@ Plugin.prototype = {
       this.defaultCountryData = this._getCountryData($.fn[pluginName].autoCountry, false, false);
       // if there's no initial value in the input, then update the flag
       if (!this.telInput.val()) {
-        this.selectCountry($.fn[pluginName].autoCountry);
+        this.setCountry($.fn[pluginName].autoCountry);
       }
       this.autoCountryDeferred.resolve();
     }
@@ -1329,7 +1329,7 @@ Plugin.prototype = {
 
 
   // update the selected flag, and update the input val accordingly
-  selectCountry: function(countryCode) {
+  setCountry: function(countryCode) {
     countryCode = countryCode.toLowerCase();
     // check if already selected
     if (!this.selectedFlagInner.hasClass(countryCode)) {
