fix paste adding ext suffix

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -517,7 +517,7 @@ Plugin.prototype = {
       setTimeout(function() {
         if (that.options.autoFormat && window.intlTelInputUtils) {
           var cursorAtEnd = (that.isGoodBrowser && that.telInput[0].selectionStart == that.telInput.val().length);
-          that._handleInputKey(null, cursorAtEnd);
+          that._handleInputKey(null, cursorAtEnd, true);
           that._ensurePlus();
         } else {
           // if no autoFormat, just update flag
