--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -234,7 +234,7 @@ Plugin.prototype = {
     }).appendTo(selectedFlag);
     // CSS triangle
     $("<div>", {
-      "class": "arrow"
+      "class": "iti-arrow"
     }).appendTo(selectedFlag);
 
     // country list
@@ -290,7 +290,7 @@ Plugin.prototype = {
         // open the list item
         tmp += "<li class='country " + className + "' data-dial-code='" + c.dialCode + "' data-country-code='" + c.iso2 + "'>";
         // add the flag
-        tmp += "<div class='flag'><div class='iti-flag " + c.iso2 + "'></div></div>";
+        tmp += "<div class='flag-box'><div class='iti-flag " + c.iso2 + "'></div></div>";
         // and the country name and dial code
         tmp += "<span class='country-name'>" + c.name + "</span>";
         tmp += "<span class='dial-code'>+" + c.dialCode + "</span>";
@@ -776,7 +776,7 @@ Plugin.prototype = {
     this._bindDropdownListeners();
 
     // update the arrow
-    this.selectedFlagInner.children(".arrow").addClass("up");
+    this.selectedFlagInner.children(".iti-arrow").addClass("up");
   },
 
 
@@ -1106,7 +1106,7 @@ Plugin.prototype = {
     this.countryList.addClass("hide");
 
     // update the arrow
-    this.selectedFlagInner.children(".arrow").removeClass("up");
+    this.selectedFlagInner.children(".iti-arrow").removeClass("up");
 
     // unbind key events
     $(document).off(this.ns);
