--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -122,11 +122,14 @@ Plugin.prototype = {
 
   // prepare all of the country data, including onlyCountries, excludeCountries and preferredCountries options
   _processCountryData: function() {
-    // set the instances country data objects
-    this._setInstanceCountryData();
+    // process this instance's countries
+    this._processAllCountries();
 
-    // set the preferredCountries property
-    this._setPreferredCountries();
+    // process the countryCodes map
+    this._processCountryCodes();
+
+    // process the preferredCountries
+    this._processPreferredCountries();
   },
 
 
@@ -140,8 +143,8 @@ Plugin.prototype = {
   },
 
 
-  // process countries
-  _processCountries: function(countryArray, processFunc) {
+  // filter the given countries using the process function
+  _filterCountries: function(countryArray, processFunc) {
     var i;
 
     // standardise case
@@ -158,25 +161,28 @@ Plugin.prototype = {
   },
 
 
-  // process onlyCountries or excludeCountries array if present, and generate the countryCodes map
-  _setInstanceCountryData: function() {
+  // process onlyCountries or excludeCountries array if present
+  _processAllCountries: function() {
     // process onlyCountries option
     if (this.options.onlyCountries.length) {
-      this._processCountries(this.options.onlyCountries, function(inArray) {
+      this._filterCountries(this.options.onlyCountries, function(inArray) {
         // if country is in array
         return (inArray != -1);
       });
     // process excludeCountries option
     } else if (this.options.excludeCountries.length) {
-      this._processCountries(this.options.excludeCountries, function(inArray) {
+      this._filterCountries(this.options.excludeCountries, function(inArray) {
         // if country is not in array
         return (inArray == -1);
       });
     } else {
       this.countries = allCountries;
     }
+  },
 
-    // generate countryCodes map
+
+  // process the countryCodes map
+  _processCountryCodes: function() {
     this.countryCodes = {};
     for (var i = 0; i < this.countries.length; i++) {
       var c = this.countries[i];
@@ -192,9 +198,8 @@ Plugin.prototype = {
   },
 
 
-  // process preferred countries - iterate through the preferences,
-  // fetching the country data for each one
-  _setPreferredCountries: function() {
+  // process preferred countries - iterate through the preferences, fetching the country data for each one
+  _processPreferredCountries: function() {
     this.preferredCountries = [];
     for (var i = 0; i < this.options.preferredCountries.length; i++) {
       var countryCode = this.options.preferredCountries[i].toLowerCase(),
@@ -444,7 +449,7 @@ Plugin.prototype = {
     // 2) not already started loading (start)
     // 3) already started loading (do nothing - just wait for loading callback to fire)
     if ($.fn[pluginName].autoCountry) {
-      this.geoIpLookupComplete();
+      this.handleAutoCountry();
     } else if (!$.fn[pluginName].startedLoadingAutoCountry) {
       // don't do this twice!
       $.fn[pluginName].startedLoadingAutoCountry = true;
@@ -461,7 +466,7 @@ Plugin.prototype = {
           // TODO: this should just be the current instances
           // UPDATE: use setTimeout in case their geoIpLookup function calls this callback straight away (e.g. if they have already done the geo ip lookup somewhere else). Using setTimeout means that the current thread of execution will finish before executing this, which allows the plugin to finish initialising.
           setTimeout(function() {
-            $(".intl-tel-input input").intlTelInput("geoIpLookupComplete");
+            $(".intl-tel-input input").intlTelInput("handleAutoCountry");
           });
         });
       }
@@ -1216,7 +1221,7 @@ Plugin.prototype = {
    ********************/
 
   // this is called when the geoip call returns
-  geoIpLookupComplete: function() {
+  handleAutoCountry: function() {
     if (this.options.initialCountry === "auto") {
       // we must set this even if there is an initial val in the input: in case the initial val is invalid and they delete it - they should see their auto country
       this.defaultCountry = $.fn[pluginName].autoCountry;
@@ -1329,7 +1334,7 @@ Plugin.prototype = {
 
 
   // this is called when the utils request completes
-  utilsRequestComplete: function() {
+  handleUtils: function() {
     // if the request was successful
     if (window.intlTelInputUtils) {
       // if autoFormat is enabled and there's an initial value in the input, then format it
@@ -1421,7 +1426,7 @@ $.fn[pluginName].loadUtils = function(path, utilsScriptDeferred) {
       url: path,
       complete: function() {
         // tell all instances that the utils request is complete
-        $(".intl-tel-input input").intlTelInput("utilsRequestComplete");
+        $(".intl-tel-input input").intlTelInput("handleUtils");
       },
       dataType: "script",
       cache: true
