--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1349,8 +1349,9 @@ Plugin.prototype = {
 
 
 
-// adapted to allow public functions
+
 // using https://github.com/jquery-boilerplate/jquery-boilerplate/wiki/Extending-jQuery-Boilerplate
+// (adapted to allow public functions)
 $.fn[pluginName] = function(options) {
   var args = arguments;
 
