changed autoFormat option to default to false

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -5,7 +5,7 @@ var pluginName = "intlTelInput",
     // typing digits after a valid number will be added to the extension part of the number
     allowExtensions: false,
     // automatically format the number according to the selected country
-    autoFormat: true,
+    autoFormat: false,
     // if there is just a dial code in the input: remove it on blur, and re-add it on focus
     autoHideDialCode: true,
     // add or remove input placeholder with an example number for the selected country
