trigger custom event when user selects country

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1088,8 +1088,8 @@ Plugin.prototype = {
 
     this._updateDialCode(listItem.attr("data-dial-code"), true);
 
-    // always fire the change event as even if nationalMode=true (and we haven't updated the input val), the system as a whole has still changed - see country-sync example. think of it as making a selection from a select element.
-    this.telInput.trigger("change");
+    // trigger a custom event as even in nationalMode the state has changed
+    this.telInput.trigger("country-change");
 
     // focus the input
     this.telInput.focus();
